2002-05-14  Eric Blake  <ebb9@email.byu.edu>

	* src/class.h (AddLocalVariable): Remove dead code.

2002-05-11  Max Gilead  <gilead@yellow.dyndns.org>

	* doc/jikes.1:
	* src/jikes.cpp:
	* src/modifier.cpp:
	* src/option.cpp:
	* src/option.h: Add +Pno-modifier-order option, to silence
	pedantic warnings about recommended modifier ordering.

2002-05-11  Eric Blake  <ebb9@email.byu.edu>

	* src/class.h:
	* src/bytecode.h:
	* src/bytecode.cpp: More bytecode optimizations: dead code
	removal, from bug 2849; goto next op removal; ?: optimizations;
	one more bug with asynchronous exceptions in try-finally and
	synchronized statements.

2002-05-09  Mo DeJong  <supermo@bayarea.net>

	* configure.in: Bump version, require autoconf 2.53 - patch 270.
	* configure: Regenerate.

2002-05-06  Eric Blake  <ebb9@email.byu.edu>

	* src/depend.h:
	* src/depend.cpp:
	* src/incrmnt.cpp:
	* src/symbol.cpp (TypeSymbol): Templatize cycle checking.

2002-05-01  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ConvertToType): Don't cast to missing return type
	- bug 2814.

2002-05-01  Eric Blake  <ebb9@email.byu.edu>

	* src/platform.cpp (SystemFopen): Add workaround for obscure bug
	in cygwin file inode hashing.

2002-04-29  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (PrintCode): Add casts for g++ 3.1 problem.
	* src/platform.h (operator<<): Ditto.
	* src/jikesapi.cpp (stat): Fix resolution issue for g++ 3.1.

2002-03-22  Eric Blake  <ebb9@email.byu.edu>

	Update to automake 1.6, autoconf 1.53.
	* .cvsignore: Ignore new configuration file.
	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* doc/Makefile.in: Regenerate.
	* src/Makefile.in: Regenerate.
	* src/config.h.in: Regenerate.
	* src/platform.h: Remove name conflict.

2002-03-14  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessAmbiguousName): Fix bug 2761.

2002-03-12  Eric Blake  <ebb9@email.byu.edu>

	* src/double.cpp (operator<, operator>): The commit on Feb 25 was